tests/integration/snapshots/integration__snapshot__artipacked-3.snap
---
source: tests/integration/snapshot.rs
expression: "zizmor().input(workflow_under_test(\"artipacked.yml\")).args([\"--persona=auditor\"]).run()?"
snapshot_kind: text
---
warning[artipacked]: credential persistence through GitHub Actions artifacts
  --> @@INPUT@@:15:9
   |
15 |       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # tag=v4.2.2
   |         ---------------------------------------------------------------------------- does not set persist-credentials: false
   |
   = note: audit confidence → Low

warning[artipacked]: credential persistence through GitHub Actions artifacts
  --> @@INPUT@@:20:9
   |
20 |         - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # tag=v4.2.2
   |  _________-
21 | |         with:
22 | |           persist-credentials: true
   | |____________________________________- does not set persist-credentials: false
   |
   = note: audit confidence → Low

2 findings: 0 unknown, 0 informational, 0 low, 2 medium, 0 high
