tests/integration/snapshots/integration__snapshot__cache_poisoning-14.snap
---
source: tests/integration/snapshot.rs
expression: "zizmor().input(workflow_under_test(\"cache-poisoning/issue-378-repro.yml\")).run()?"
snapshot_kind: text
---
No findings to report. Good job!
