tests/integration/snapshots/integration__snapshot__cache_poisoning-2.snap
---
source: tests/integration/snapshot.rs
expression: "zizmor().input(workflow_under_test(\"cache-poisoning/caching-enabled-by-default.yml\")).run()?"
snapshot_kind: text
---
error[cache-poisoning]: runtime artifacts potentially vulnerable to a cache poisoning attack
  --> @@INPUT@@:1:1
   |
 1 | on: release
   | ^^^^^^^^^^^ generally used when publishing artifacts generated at runtime
 2 |
...
15 |       - name: Setup CI caching
16 |         uses: Swatinem/rust-cache@82a92a6e8fbeee089604da2575dc567ae9ddeaab
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ cache enabled by default here
   |
   = note: audit confidence → Low

1 finding: 0 unknown, 0 informational, 0 low, 0 medium, 1 high
