tests/integration/snapshots/integration__snapshot__cache_poisoning-7.snap
---
source: tests/integration/snapshot.rs
expression: "zizmor().input(input_under_test(\"cache-poisoning/no-cache-aware-steps.yml\")).run()?"
---
No findings to report. Good job!
